--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
       <div class="m-block">
         <div class="m-inner">
-          <h1 class="m-title">CREATEX CONSTRUCTION</h1>
+          <h1 class="m-title">CREATE<span style="color: #FF5A30;">X</span> CONSTRUCTION</h1>
           <p class="m-text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
         </div>
         <div class="m-buttons">
