Added an 80% footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="container">
       <div class="h-inner">
-        <img src="assets/images/logo.svg" class="h-logo">
+        <img src="assets/images/logo-header.svg" class="h-logo">
 
         <div class="h-links">
           <a href="#" class="h-link">About As</a>
@@ -69,5 +69,66 @@
       </div>
     </div>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="f-inner-up">
+        <div class="fu-column-left">
+          <div class="ful-title-inner">
+            <img src="assets/images/logo-footer.svg" class="ful-logo">
+            <div class="ful-icos">
+              <img src="assets/images/whatsapp.svg" class="ful-ice">
+              <img src="assets/images/messanger.svg" class="ful-ice">
+              <img src="assets/images/facebook.svg" class="ful-ice">
+              <img src="assets/images/twitter.svg" class="ful-ice">
+              <img src="assets/images/youTube.svg" class="ful-ice">
+            </div>
+          </div>
+          <p class="ful-text">Createx Construction Bureau has been successfully operating in the USA construction market since 2000. We are proud to offer you quality construction and exemplary service. Our mission is to set the highest standards for construction sphere.</p>
+        </div>
+        <!-- <div class="fu-column-right">
+          <h2 class="furu-title">Let's stay in touch</h2>
+          <div class="fur-text-inner">
+            <input type="text" class="fur-input">
+            <div class="fur-text">*Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.</div>
+          </div>
+        </div> -->
+      </div>
+      <div class="f-inner-center">
+        <div class="fc-column-left">
+          <h2 class="fcl-title">HEAD OFFICE</h2>
+          <div class="fcl-inner">
+            <p href="#" class="fcl-text"><span style="color: #ffffff;">Address:</span> 8502 Preston Rd. Inglewood, New York</p>
+            <p href="#" class="fcl-text"><span style="color: #ffffff;">Call:</span> (405) 555-0128</p>
+            <p href="#" class="fcl-text"><span style="color: #ffffff;">Email:</span> hello@createx.com</p>
+          </div>
+        </div>
+        <div class="fc-column-center">
+          <h2 class="fcc-title">WHO WE ARE</h2>
+          <div class="fcc-inner">
+            <a href="#" class="fcc-link">About Us</a>
+            <a href="#" class="fcc-link">Available Positions</a>
+            <a href="#" class="fcc-link">Contacts</a>
+          </div>
+        </div>
+        <div class="fc-column-right">
+          <h2 class="fcr-title">OUR EXPERIENCE</h2>
+          <div class="fcr-inner">
+            <a href="#" class="fcr-link">Services</a>
+            <a href="#" class="fcr-link">Work</a>
+            <a href="#" class="fcr-link">News</a>
+          </div>
+        </div>
+      </div>
+      <div class="f-inner-bottom">
+        <div class="fb-copyright">
+          <p class="fbc-text">© All rights reserved. Made with</p>
+          <img src="assets/images/emoji-heart.svg" class="fbc-emoji">
+          <p class="fbc-text">by Createx Studio </p>
+        </div>
+
+        <a href="#" class="fb-btn"></a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
