The footer is completely finished

--- a/index.html
+++ b/index.html
@@ -85,13 +85,16 @@
           </div>
           <p class="ful-text">Createx Construction Bureau has been successfully operating in the USA construction market since 2000. We are proud to offer you quality construction and exemplary service. Our mission is to set the highest standards for construction sphere.</p>
         </div>
-        <!-- <div class="fu-column-right">
-          <h2 class="furu-title">Let's stay in touch</h2>
+        <div class="fu-column-right">
+          <h2 class="fur-title">Let's stay in touch</h2>
           <div class="fur-text-inner">
-            <input type="text" class="fur-input">
+            <div class="fur-input-inner">
+              <input type="text" class="fur-input" placeholder="Your email address">
+              <a href="#" class="fur-btn">SUBSCRIBE</a>
+            </div>
             <div class="fur-text">*Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.</div>
           </div>
-        </div> -->
+        </div>
       </div>
       <div class="f-inner-center">
         <div class="fc-column-left">
@@ -123,10 +126,10 @@
         <div class="fb-copyright">
           <p class="fbc-text">© All rights reserved. Made with</p>
           <img src="assets/images/emoji-heart.svg" class="fbc-emoji">
-          <p class="fbc-text">by Createx Studio </p>
+          <p class="fbc-text">by Createx Studio</p>
         </div>
 
-        <a href="#" class="fb-btn"></a>
+        <a href="#" class="fb-btn"><img src="assets/images/up-chevron.svg"></a>
       </div>
     </div>
   </footer>
